# food-formulations-pfi

./: .gitignore  README.md  TECHNICAL_NOTES.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py
data/2_processed/: formulas_map.csv
data_engineering/ddl/0_schemas/: 02_create_use_cases_schema.sql
data_engineering/ddl/1_tables/: 01_create_dim_ingredientes.sql  02_create_dim_evaluadores.sql  03_create_dim_formulaciones.sql  03_create_dim_operarios.sql  04_create_dim_operarios.sql  04_create_dim_tiempo.sql  05_create_dim_dolar.sql  05_create_dim_tiempo.sql  06_create_dim_dolar.sql  06_create_dim_formulaciones.sql  07_create_dim_procesos.sql  08_create_bridge_formula_ing.sql  09_create_fact_form.sql
data_engineering/insert/historical/: 01_insert_dim_ingredientes.py  02_insert_dim_evaluadores.py  03_insert_dim_operarios.py  04_insert_dim_tiempo.py  05_insert_dim_dolar.py  06_insert_dim_formulaciones.py  07_insert_dim_procesos.py  08_insert_bridge_formula_ing.py  09_insert_fact_form.py  10_create_training_view.py  load_dim_time_dolar.py  load_historical_aux_dimensions.py  load_historical_fact.py  load_historical_formulations.py  load_historical_ingredients.py
data_engineering/scripts/: run_all_historical.py  run_setup.py  setup_db.py
pipelines/: data_loader.py  model_selector.py  preprocessor.py  train.py
pipelines/food_pfi/: load_dim_time_dolar.py  load_historical_aux_dimensions.py  load_historical_fact.py  load_historical_formulations.py  load_historical_ingredients.py  setup_db.py
serve/: api.py  predictor.py
src/: config.py
